Seguridad y paginacion de acreedores

--- a/src/app/components/vistaAcreedores/acreedores.component.html
+++ b/src/app/components/vistaAcreedores/acreedores.component.html
@@ -6,7 +6,7 @@
       <button class="btn btn-rounded btn btn-success" types="button" [routerLink] = "['/acreedores/form-acreedores.component']">Nuevo Acreedor</button>
     </div>
 
-    <table class="table table-bordered table-striped text-center">
+    <table class="table text-center">
       <thead class="thead-dark">
         <tr>
           <th>Nombre</th>
@@ -18,16 +18,27 @@
       </thead>
 
       <tbody>
-        <tr *ngFor="let acreedor of acreedores">
-          <td>{{ acreedor.nombre }}</td>
-          <td>{{ acreedor.nif }}</td>
-          <td>{{ acreedor.iban }}</td>
+        <tr *ngFor="let a of elementos[0]">
+          <td>{{ acreedores[getOrdenPagindoIndex(a,   paginaActual)].nombre }}</td>
+          <td>{{ acreedores[getOrdenPagindoIndex(a,   paginaActual)].nif }}</td>
+          <td>{{ acreedores[getOrdenPagindoIndex(a,   paginaActual)].iban }}</td>
           <td>
-            <button type="button" class="btn btn-link" name="button" [routerLink]="['/acreedores/form-acreedores.component', acreedor.nif]">
+            <button type="button" class="btn btn-link" name="button" [routerLink]="['/acreedores/form-acreedores.component', acreedores[getOrdenPagindoIndex(a,   paginaActual)].nif]">
               <img src="assets/iconos/editar.png" class="rounded" alt="Editar Acreedor">
             </button>
           </td>
           
+        </tr>
+
+        <tr><!--Los botones llaman a las funciones anterior y siguiente y actualizan a la pagina correspondiente-->
+          <button  type="button" class="btn btn-link mr-2" (click) ="paginaActual= anterior(paginaActual, acreedores.length, 0)">
+              <img src="assets/iconos/anterior.png" class="rounded" alt="Anterior">
+          </button>
+          
+          <button  type="button" class="btn btn-link" (click) = "paginaActual = siguiente(paginaActual, acreedores.length, 0)">
+              <img  src="assets/iconos/siguiente.png" class="rounded" alt="Siguiente">
+          </button>
+         
         </tr>
       </tbody>
     </table>
