vista orden de viajes hecha

--- a/src/app/components/vista-ordenes/add-orden-viajes/add-orden-viajes.component.html
+++ b/src/app/components/vista-ordenes/add-orden-viajes/add-orden-viajes.component.html
@@ -398,7 +398,7 @@
         <br>
         <div class="form-group">
           <label class="texto-form" for="relacion">Relación con el proyecto</label>
-          <textarea class="form-control" id="relacion" rows="3" formControlName="relacion" placeholder="Escribe la relación con el proyecto" disabled></textarea>
+          <textarea class="form-control" id="relacion" rows="3" placeholder="{{relacion}}" disabled></textarea>
           <div class="alerta">
             <small *ngIf="false">No puede estar vacio <br></small>
           </div>
