--- a/src/app/components/vista-ordenes/ver-orden/ver-orden.component.html
+++ b/src/app/components/vista-ordenes/ver-orden/ver-orden.component.html
@@ -5,7 +5,7 @@
   <div class="col-md-6">
     <table class="table table-bordered text-center">
       <thead>
-        <tr>
+        <tr class="table-secondary">
           <th scope="col" colspan="4">Orden de Pago <br> <small>Memoria Justificativa</small></th>
         </tr>
       </thead>
@@ -31,8 +31,8 @@
   <div class="col-md-6">
       <table class="table table-bordered text-center">
         <thead>
-          <tr>
-            <th  scope="col" colspan="3">Pagar A<br>  </th>
+          <tr class="table-secondary">
+            <th  scope="col" colspan="3">Pagar A <br> <small class="text-secondary"> &nbsp; </small>  </th>
           </tr>
         </thead>
         <tbody>
@@ -46,20 +46,22 @@
               <td>{{acreedor.iban}}</td>
               <td>{{orden.observaciones}}</td>
           </tr>
-        
+
+         
         </tbody>
       </table>
     </div>
 
   <!--Datos del IP-->
   <div class="col-md-12">
-    <table class="table table-bordered text-center">
+    <table  class="table table-bordered text-center">
       <thead>
-        <tr>
+        <tr class="table-secondary">
           <th scope="col" colspan="4">Datos del Investigador Principal</th>
         </tr>
       </thead>
-      <tbody>
+      <small class="alerta" *ngIf="!firmada">No se pueden mostrar los datos del IP hasta que no esté firmada</small>
+      <tbody *ngIf="firmada">
         <tr>
           <th scope="row">Nombre y Apellidos</th>
           <td>{{ip.nombre}} {{ip.apellido1}}  {{ip.apellido2}}</td>
@@ -81,13 +83,14 @@
       </tbody>
     </table>
   </div>
+  
 
   <!--Tabla de gastos generales. Habra que poner un ngif con el tipo-->
 
-  <div class="col-md-12">
+  <div *ngIf="isG" class="col-md-12">
     <table class="table table-bordered text-center">
       <thead>
-        <tr>
+        <tr class="table-secondary">
           <th scope="col" colspan="3">Relación de gastos</th>
         </tr>
         <tr>
@@ -106,12 +109,103 @@
     </table>
   </div>
 
-
-
-  <div class="col-md-12">
+  <div *ngIf="isV" class="col-md-12">
     <table class="table table-bordered text-center">
       <thead>
+        <tr class="table-secondary">
+          <th scope="col" colspan="6">Datos del Viaje/Desplazamiento</th>
+        </tr>
+      </thead>
+
+      <tbody>
+          <tr>
+              <th scope="col" colspan="2">Nombre y apellidos de quien realiza el viaje</th>
+              <td colspan="4">{{usuario.nombre}} {{usuario.apellido1}}  {{usuario.apellido2}}</td> <!--Cambiar por usuario-->
+          </tr>
+          <tr>
+              <th scope="col" colspan="2">Relación con el Proyecto</th>
+              <td colspan="4">{{orden.relacion}} </td> 
+          </tr>
+          <tr>
+              <th scope="col" colspan="2">Objeto del desplazamiento en relación con la ejecución del proyecto</th>
+              <td colspan="4">{{orden.memoria}} </td> 
+          </tr>
         <tr>
+            <th scope="col">Itinerario:</th>
+          <td>itinerario</td><!--Cambiar por gastoViaje-->
+          <th scope="col">Fecha ida:</th>
+          <td>01/02/2003</td> <!--Cambiar por gastoViaje-->
+          <th scope="col">Fecha vuelta:</th>
+          <td>05/04/2003</td> <!--Cambiar por gastoViaje-->
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div *ngIf="isV" class="col-md-12">
+      <table class="table table-bordered">
+        <thead>
+          <tr class="table-secondary">
+            <th class="text-center" scope="col" colspan="5">Justificación de Gastos</th>
+            <th class="text-center" scope="col">Importe</th>
+          </tr>
+        </thead>
+  
+        <tbody>
+          <tr>
+            <th class="text-center" rowspan="6">Transporte</th>
+            <th colspan="4">Avion</th>
+            <td class="text-center">ImporteAvion</td>                
+          </tr>
+          <tr>
+            <th colspan="2">Coche</th>
+            <th>Numero de KM</th>
+            <td>222KM</td> 
+            <td class="text-center">ImporteCoche</td>                
+          </tr>
+          <tr>
+            <th colspan="4">Tren</th>
+            <td class="text-center">ImporteTren</td>                
+          </tr>
+          <tr>
+            <th colspan="4">Autobus</th>
+            <td class="text-center">ImporteAutobus</td>                
+          </tr>
+          <tr>
+            <th colspan="4">Taxi</th>
+            <td class="text-center">ImporteTaxi</td>                
+          </tr>
+          <tr>
+            <th colspan="3">Otros</th>
+            <td>ConceptoOtros</td>  
+            <td class="text-center">ImporteTaxi</td>               
+          </tr>
+          <tr>
+            <th class="text-center">Alojamiento</th>
+            <th colspan="4">Factura Hotel</th>
+            <td class="text-center">ImporteHotel</td>                
+          </tr>
+          <tr>
+            <th class="text-center">Manutencion</th>
+            <th>Nº de Dietas</th>
+            <td>ndietas</td>       
+            <th>Cuantia por Dieta</th>
+            <td>cuadro de dietas</td>        
+            <td class="text-center">Total Dietas</td>        
+          </tr>
+          <tr class="table-secondary">
+            <th class="text-right" colspan="5">TOTAL GASTOS:</th>
+            <td class="text-center">total</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  
+
+  <div *ngIf="isG" class="col-md-12">
+    <table class="table table-bordered text-center">
+      <thead>
+        <tr class="table-secondary">
           <th scope="col">Memoria Explicativa</th>
         </tr>
       </thead>
@@ -126,7 +220,7 @@
   <div class="col-md-12">
     <table class="table table-bordered text-center">
       <thead>
-        <tr>
+        <tr class="table-secondary">
           <th scope="col">Relacion con el Proyecto</th>
         </tr>
       </thead>
@@ -138,14 +232,10 @@
     </table>
   </div>
 
-
-
-
-
-
-
-
-
-
+  
+  <button *ngIf="!firmada && isIP" class="btn btn-rounded btn btn-success mr-3 ml-3" types="button" (click)="aceptarOrden()">Aceptar Orden</button>
+  <button *ngIf="!firmada && isIP" class="btn btn-rounded btn btn-danger m-0" types="button" (click)="rechazarOrden()">Rechazar Orden</button>
+ <!-- <button class="btn btn-rounded btn btn-success m-0" types="button" (click)="pedirModificacionOrden()">Modificar Orden</button>-->
+  
 
 </div>
