--- a/src/app/components/vista-ordenes/vista-ordenes.component.html
+++ b/src/app/components/vista-ordenes/vista-ordenes.component.html
@@ -10,7 +10,7 @@
     </div>
 
     <!--TABLA DE ÓRDENES-->
-    <div class="form-row" *ngIf="ordenes?.length > 0">
+    <!--<div class="form-row" *ngIf="ordenes?.length > 0">
         <div class="col">
             <input type="text" class="form-control form-control-sm" id="numeracion" placeholder="Numeración">
         </div>
@@ -24,7 +24,7 @@
               <option value="devueltas">Devueltas</option>
             </select>
         </div>
-    </div>
+    </div>-->
 
     <p></p>
     <table class="table" id="tablaOrdenes" *ngIf="ordenes?.length > 0">
