--- a/src/app/components/vistaProyectos/proyectos.component.html
+++ b/src/app/components/vistaProyectos/proyectos.component.html
@@ -6,7 +6,7 @@
 
 
     <!--Lista desplegable-->
-    <div class="form-group my-3">
+    <!--<div class="form-group my-3">
     <label for="ordenProyectos">Ordenar por:</label>
       <select class="custom-select">
         <option selected>Seleccione</option>
@@ -14,7 +14,7 @@
         <option value="acronimo">Acrónimo</option>
         <option value="nombre">Nombre</option>
       </select>
-    </div>
+    </div>-->
 
     <table class="table text-center">
       <thead class="thead-dark">
