--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -3,12 +3,13 @@
   margin-right: 50px;
 }
 
-img {
-  margin-left: 37%;
-  margin-top: 20%;
-  float: left;
-}
+
 
 .boton{
   background-color: white;
+}
+.icon{
+  width: 60%;
+  min-width: 16px;
+  max-width: 30px;
 }
