--- a/src/app/components/vistaProyectos/formProyectos/form-proyectos.component.html
+++ b/src/app/components/vistaProyectos/formProyectos/form-proyectos.component.html
@@ -54,14 +54,14 @@
         <input type="text" class="form-control" formControlName="nContabilidad" id="nContabilidad" placeholder="Número de contabilidad" name="nContabilidad" maxlength="16">
         <div class="alerta">
           <small *ngIf="!formValid && formProyecto.get('nContabilidad').hasError('required')">No puede estar vacio o supera el limite de caracteres <br></small>
-        </div>-
+        </div>
       </div>
     </div>
 
     <div class="form-row">
       <div class="form-group col-md-6 mb-3">
         <label for="ip2">   IP 1</label>
-        <input type="text" class="form-control" formControlName="ip1" id="ip1" placeholder={{nombreIP1}} name="ip1" disabled>
+        <input type="text" class="form-control"  id="ip1" placeholder={{nombreIP1}} name="ip1" disabled>
       </div>
         <div class="form-group col-md-6 mb-3">
             <label for="ip2">   IP 2</label>
