--- a/src/app/components/vista-ordenes/add-orden/add-orden.component.html
+++ b/src/app/components/vista-ordenes/add-orden/add-orden.component.html
@@ -237,7 +237,7 @@
           <textarea class="form-control" id="observaciones" rows="3" formControlName="observaciones" placeholder="Escribe las observaciones que creas correspondientes"></textarea>
         </div>
       <br>
-        <a href="#"><img src="../../../../../assets/iconos/pdf.png" alt="Descargar orden pdf" width="80px"></a>
+      <!-- <a href="#"><img src="../../../../../assets/iconos/pdf.png" alt="Descargar orden pdf" width="80px"></a>-->
       <br><br>
       <button class="btn btn-success" role="button" (click)="cargarNumProyectoOrden()">Crear Orden</button>
       <button class="btn btn-danger" role="button" (click)="cancelar()">Cancelar</button>
