--- a/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.html
+++ b/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.html
@@ -1,26 +1,47 @@
 
  <form [formGroup]="formFecha">
     <!--<h3>Nombre completo del proyecto (acronimo) - Nº Contabilidad</h3>-->
-    <h3>{{proyecto.acronimo}} - {{proyecto.nContabilidad}}</h3>
-    <div class="form-row mt-0" >
-      <div class="col-2 mt-2">
-          <span>Inicio - {{proyecto.fechaInicio}} </span> 
-      </div>
-      <div class="col-2 mt-2 ml-0">
-        <span>Fin - {{proyecto.fechaCierre}}</span>
-        <input *ngIf="editarFechaActiva" type="date" class="form-control" formControlName="fechaCierre" id="fechaCierre" placeholder="fecha de cierre" name="fechaCierre">
-       
-      </div>
-      
-      <div *ngIf="permitirEdicion" class="col-1 mt-0">
-        <button *ngIf="!editarFechaActiva" type="button" class="btn btn-link" name="button" (click)="editarFecha()" >
-          <img src="assets/iconos/editDate.png" class="rounded" alt="Eliminar Proyecto">
-        </button>
-        <button *ngIf="editarFechaActiva" type="submit" class="btn btn-link" name="button" (click)="guardarFecha()" >
-          <img src="assets/iconos/guardar.png" class="rounded" alt="Eliminar Proyecto">
-        </button>
-      </div>
-    </div>  
+    <h3>{{proyecto.acronimo}}</h3>
+    <div>
+      <table class="table text-center">
+        <thead class="thead-dark">
+          <tr>
+            <th>Fecha de Inicio</th>
+            <th colspan="2">Fecha de Cierre</th>
+            <th>Nombre</th>
+            <th>Presupuesto</th>
+            <th>Nºcontabilidad</th>
+          </tr>
+        </thead>
+  
+        <tbody>
+           <tr>
+            <td>{{ proyecto.fechaInicio }}</td>
+            <td>
+                {{proyecto.fechaCierre}}
+                <button *ngIf="!editarFechaActiva" type="button" class="btn btn-link" name="button" (click)="editarFecha()" >
+                    <img src="assets/iconos/editDate.png" class=" icon" alt="Editar Proyecto">
+                  </button>
+            </td>
+           
+            <td *ngIf="permitirEdicion">
+                <input *ngIf="editarFechaActiva" type="date" class="form-control" formControlName="fechaCierre" id="fechaCierre" placeholder="fecha de cierre" name="fechaCierre">              
+                  <button *ngIf="editarFechaActiva" type="submit" class="btn btn-link" name="button" (click)="guardarFecha()" >
+                    <img src="assets/iconos/guardar.png" class="rounded icon" alt="Guardar Fecha">
+                  </button>
+                  <button *ngIf="editarFechaActiva" type="submit" class="btn btn-link" name="button" (click)="editarFecha()" >
+                      <img src="assets/iconos/menos.png" class="rounded icon" alt="Cancelar">
+                    </button>
+            </td>
+            <td>{{ proyecto.nombre }}</td>
+            <td>{{ proyecto.presupuesto }}</td>
+            <td>{{ proyecto.nContabilidad }}</td>
+           </tr>
+        </tbody>
+      </table>
+
+
+    </div>
 
     
   </form>
@@ -31,33 +52,39 @@
   <div class="col-md-6">
     <div class="row">
       <div class="col-md-12">
-        <h5>Ordenes Pendientes</h5>
-        <table class="table table-bordered table-striped text-center">
+        <h5 *ngIf="ordenes?.length > 0"> Ordenes Pendientes</h5>
+        <table class="table" id="tablaOrdenes" *ngIf="ordenes?.length > 0">
           <thead class="thead-dark">
             <tr>
               <th scope="col">Fecha</th>
-              <th scope="col">Nombre</th>
+              <th scope="col">Estado</th>
               <th scope="col">Concepto</th>
+              <th scope="col">Ver</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td>20-10-2018</td>
-              <td>Azahara Fernández Notario</td>
-              <td>Viaje a Londres</td>
+          <tbody id="tablaOrdenes">
+              <tr *ngFor="let i of elementos[0];"> <!--and maxOrdenesOK(a))">--> 
+                <td>{{ordenes[getOrdenPagindoIndex(i, paginaActual)].fechaOrden}}</td>
+                  <td>{{ordenes[getOrdenPagindoIndex(i, paginaActual)].estado}}</td>
+                  <td>{{ordenes[getOrdenPagindoIndex(i, paginaActual)].concepto}}</td>
+              
+                  <td>
+                    <button type="button" class="btn btn-link" name="button" [routerLink]="['/vistaOrdenes/verOrden/', ordenes[getOrdenPagindoIndex(i, paginaActual)].id]" >
+                      <img src="assets/iconos/lupa.png" class="rounded ml-0 icon" alt="Editar Orden" maxwidth="10px">
+                    </button>
+                  </td>
             </tr>
-            <tr>
-              <td>20-10-2018</td>
-              <td>Isabel Núñez de la Torre</td>
-              <td>Impresora</td>
-            </tr>
-            <tr>
-              <td>20-10-2018</td>
-              <td>Mercedes García Merayo</td>
-              <td>Comida RITSI</td>
+            <tr><!--Los botones llaman a las funciones anterior y siguiente y actualizan a la pagina correspondiente-->
+              <button type="button" class="btn btn-link mr-2" (click) ="paginaActual= anterior(paginaActual, ordenes.length, 0)">
+                  <img src="assets/iconos/anterior.png" class="rounded" alt="Anterior">
+              </button>
+              
+              <button type="button" class="btn btn-link" (click) = "paginaActual = siguiente(paginaActual, ordenes.length, 0)">
+                  <img src="assets/iconos/siguiente.png" class="rounded" alt="Siguiente">
+              </button>
             </tr>
           </tbody>
-        </table>
+      </table>
       </div>
     </div>
 
